# ntu-cvpdl

hw1/: .gitignore  README.md  data.yaml  inference.py  pyproject.toml  valid_r10945004.json
hw1/inference/: eval_new.py  sample_submission.json
hw1/lecture/: CVPDL_hw1.pptx
hw1/script/: run_infer.sh
hw1/utils/: config.py  merge_coco_json.py
hw3/: .gitignore  README.md  pyproject.toml
hw3/generation/: visualiztion_200_filled_blip2-flan-t5-xl.json
hw3/ref_dataset/: resize_to_512.py
hw3/script/: run_gligen_inference.sh
hw3/src/blip/: pyproject.toml
hw3/src/gligen/: .gitignore  convert_ckpt.py  gligen_inference.py  pyproject.toml
