[project]
name = "cvpdl-hw1-project"
version = "0.1.0"
description = "CVPDL hw1 project"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "lightning[extra]>=2.4.0",
    "matplotlib>=3.9.2",
    "notebook>=7.2.2",
    "pycocotools>=2.0.8",
    "pytorch-lightning>=2.4.0",
    "roboflow>=1.1.47",
    "scipy>=1.13.1",
    "supervision==0.3.0",
    "timm>=1.0.9",
    "transformers>=4.45.2",
]
